--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-select": "^5.8.0",
     "react-toastify": "^9.1.3",
     "styled-components": "^6.1.6",
+    "sweetalert2": "^11.10.3",
     "yup": "^1.3.3"
   },
   "devDependencies": {
